added variance to distribute calls
